@@ -1,5 +1,8 @@
 Build.PL
+docs/metadata/blurb
+docs/metadata/description
 docs/metadata/metadata.json
+docs/metadata/requirements
 lib/Empty.pm
 MANIFEST			This list of files
 MANIFEST.SKIP
