@@ -9,6 +9,10 @@ DocKnot 3.02 (unreleased)
     gzip-compressed tarball, generate an xz-compressed tarball from the
     gzip-compressed tarball during docknot dist.
 
+    docknot dist now checks for files present in the source tree but
+    missing from the distribution, apart from a (currently hard-coded)
+    list of exceptions.
+
     docknot dist now removes any existing directory when creating a new
     distribution.  It overrides permissions if possible while doing this
     so that it can clean up from a failed Automake make distcheck, so the
